# ktools-python

./: .kbuild.json  AGENTS.md  README.md
kcli/: .gitignore  .kbuild.json  AGENTS.md  CMakeLists.txt  README.md  sitecustomize.py
kcli/cmake/: KcliSDKConfig.cmake.in
kcli/demo/: README.md
kcli/demo/bootstrap/: CMakeLists.txt  README.md  main.py
kcli/demo/exe/core/: CMakeLists.txt  README.md  main.py
kcli/demo/exe/omega/: CMakeLists.txt  README.md  main.py
kcli/demo/sdk/: __init__.py  alpha.py  beta.py  common.py  gamma.py
kcli/demo/sdk/alpha/: README.md
kcli/demo/sdk/beta/: README.md
kcli/demo/sdk/gamma/: README.md
kcli/demo/tests/: test_bootstrap_cli.py  test_core_cli.py  test_omega_cli.py
kcli/docs/: README.md  api.md  behavior.md  examples.md  index.md
kcli/src/kcli/: __init__.py  _api.py  _backend.py  _model.py  _normalize.py  _process.py  _process_help.py  _process_plan.py  _process_values.py
kcli/tests/: _support.py  test_aliases.py  test_errors_and_flow.py  test_inline_roots.py  test_kcli.py  test_normalization.py  test_values_and_positionals.py
ktrace/: .gitignore  .kbuild.json  AGENTS.md  CMakeLists.txt  README.md
ktrace/cmake/: KtraceSDKConfig.cmake.in
ktrace/demo/: README.md
ktrace/demo/bootstrap/: CMakeLists.txt  README.md  main.py
ktrace/demo/exe/core/: CMakeLists.txt  (+2 more)
ktrace/demo/sdk/: __init__.py  alpha.py  beta.py  common.py  gamma.py
ktrace/demo/tests/: test_bootstrap_cli.py  test_core_cli.py  test_omega_cli.py
ktrace/docs/: README.md  api.md  behavior.md  index.md
ktrace/src/ktrace/: __init__.py  _api.py  _selectors.py
ktrace/tests/: test_ktrace.py
(+20 files in other folders)
